# JUNE2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  USER_GUIDE.md  environment.yml  rebuild.sh
.githooks/: pre-push
.github/workflows/: ci.yml  lint.yml
analysis_tools/: June_events_example.ipynb  june_events_functions.ipynb
analysis_tools/june_events/: CONTEXT.md  PDR.md  __init__.py  load_enriched.py
analysis_tools/june_events/decode/: __init__.py  (+2 more)
configs/config_1911/: activity_preferences.yaml  contact_matrices.yaml  coordinated_encounters.yaml  disease.yaml  infection_seeds.yaml  parallel.yaml  policies.yaml  schedules.yaml  simulation.yaml
configs/config_2021/: contact_matrices.yaml  contact_matrices_new.yaml  coordinated_encounters.yaml  disease.yaml  disease_new.yaml  infection_seeds.yaml  parallel.yaml  performance.yaml  policies.yaml  schedules.yaml  simulation.yaml  simulation_multi.yaml
configs/config_plague/: contact_matrices.yaml  disease_plague.yaml  infection_seeds.yaml  on_the_fly_venues.yaml  performance.yaml  policies.yaml  rats_plugin.yaml  rats_plugin_sidecar.yaml  schedules.yaml  simulation.yaml  vaccines.yaml
configs/config_plague_fitting/: contact_matrices.yaml  coordinated_encounters.yaml  disease.yaml  disease_plague.yaml  parallel.yaml  schedules.yaml  simulation.yaml
configs/config_plague_fitting_short/: activity_preferences.yaml  contact_matrices.yaml  infection_seeds.yaml  output.yaml  policies.yaml  schedules.yaml  simulation.yaml
data/: infection_outcome_rates_covid19.csv  infection_outcome_rates_plague.csv
data/domain_decomposition/: county_centroids.csv
docs/: CONTEXT-MAP.md  CONTEXT.md  calendar_event_simulator_wiring_notes.md
docs/adr/: 0001-presence-window-policy-d14.md  0002-calendar-event-venue-guard-as-fallback.md  0002-fair-accommodation-venue-resolution.md  0003-compartmental-model-seasonality-anchored-to-calendar-day.md  0004-size-checked-chunking-for-raw-table-loads.md  0005-symptom-id-0-reserved-for-recovered.md  0006-default-contact-matrix-fails-loud-no-scalar-fallback.md  0007-default-mode-matrix-finalised-in-simulator-constructor.md
include/activity/: activity_manager.h  coordinated_encounter_manager.h  coordinated_encounter_types.h  on_the_fly_venue_allocator.h  presence_window.h  runtime_bin_allocator.h  venue_resolve_context.h
include/core/: config.h  types.h  variant.h  world_state.h
include/epidemiology/: calendar_event.h  disease.h  epidemiology.h  infection_seed.h  infectiousness_curves.h  interaction_manager.h  policy.h  vaccination_manager.h  vaccine.h
include/loaders/: calendar_event_loader.h  catchment_rule_loader.h  config_loader.h  config_loader_detail.h  disease_loader.h  domain_loader_internals.h  hdf5_loader.h  policy_loader.h
include/parallel/: domain.h  domain_communicator.h  domain_communicator_detail.h  domain_manager.h  geography_partitioner.h  mpi_utils.h
include/simulation/: compartmental_model_manager.h  compartmental_model_plugin.h  follow_bindings.h  simulator.h
include/utils/: age_utils.h  config_checks.h  deterministic_rng.h  event_logger.h  filtered_csv.h  filtering.h  memory_utils.h  profiler.h  random.h  run_dir.h  time_utils.h
scripts/: setup_hooks.sh
src/: config.cpp  disease.cpp  disease_loader.cpp  infection_seed.cpp  interaction_manager.cpp  interaction_manager_partial_presence.cpp  interaction_manager_venue.cpp  interaction_manager_venue_bins.cpp  main.cpp  merge_events.cpp
src/activity/: activity_manager.cpp  activity_manager_selection.cpp  coordinated_encounter_manager.cpp  coordinated_encounter_manager_stats.cpp  on_the_fly_venue_allocator.cpp  presence_window.cpp  runtime_bin_allocator.cpp
src/core/: config.cpp  config_checks.cpp  world_state.cpp
src/epidemiology/: calendar_event.cpp  disease.cpp  epidemiology.cpp  infection_seed.cpp  policy.cpp
src/interaction/: interaction_manager.cpp  interaction_manager_partial_presence.cpp  interaction_manager_venue.cpp  interaction_manager_venue_bins.cpp
src/loaders/: calendar_event_loader.cpp  catchment_rule_loader.cpp  config_loader.cpp  config_loader_encounters.cpp  config_loader_vaccination.cpp  disease_loader.cpp  domain_loader.cpp  domain_loader_internals.cpp  hdf5_loader.cpp
src/parallel/: domain.cpp  domain_communicator.cpp  domain_communicator_encounters.cpp  domain_manager.cpp  geography_partitioner.cpp
src/simulation/: compartmental_model_manager.cpp  simulator.cpp  simulator_checkpoint.cpp  simulator_encounters.cpp  simulator_reporting.cpp  simulator_restore.cpp  simulator_timeslot.cpp
src/utils/: event_logger.cpp  filtered_csv.cpp  filtering.cpp
tests/: checkpoint_determinism_check.py  doctest.h  mock_compartmental_model.cpp  mock_compartmental_model.h  test_activity_manager.cpp  test_calendar_event_checkpoint.cpp  test_calendar_event_loader.cpp  test_calendar_event_manager.cpp  test_calendar_event_trigger.cpp  test_calendar_event_venue.cpp  test_catchment_rule_loader.cpp  test_compartmental_coupling_matrix.cpp  test_compartmental_disease_mode.cpp  test_compartmental_integration.cpp  test_compartmental_model_manager.cpp  test_compartmental_transmission.cpp  test_compartmental_writeback.cpp  test_config_checks.cpp  test_config_loading.cpp  test_coordinated_encounters.cpp  test_cross_domain_venues.cpp  test_day_types.cpp  test_deterministic_rng.cpp  test_domain_communicator_detail.cpp  test_epidemiology.cpp  test_foi_calculation.cpp  test_follow.cpp  test_fomite_transmission.cpp  test_infection.cpp  test_integration.cpp  test_membership_metadata_matching.cpp  test_mpi_advanced.cpp  test_mpi_communication.cpp  test_mpi_full_reproducibility.sh  test_mpi_reproducibility.sh  test_mpi_transmission_modes.cpp  test_on_the_fly_venue_allocator.cpp  test_partial_presence_foi.cpp  test_presence_window.cpp  test_run_dir.cpp  (+11 more)
tests/configs/: contact_matrices.yaml  contact_matrices_default_missing_mode.yaml  contact_matrices_empty_mode_names_default.yaml  contact_matrices_missing_default.yaml  contact_matrices_modes_default.yaml  contact_matrices_reversed_modes.yaml  romantic_regression.yaml
(+34 files in other folders)
